Do add localisation

--- a/src/resources/strings_de.properties
+++ b/src/resources/strings_de.properties
@@ -1,1 +1,25 @@
-application_name=ShoppingListGenerator
+no_database_driver_available=Datenbank Treiber nicht vorhanden.
+dish=Gericht
+dishes=Gerichte
+ingredient=Zutat
+ingredients=Zutaten
+about=Über
+settings=Einstellungen
+back=Zurück
+forward=Weiter
+sort=Sortieren
+add=Hinzufügen
+change=Ändern
+remove=Entfernen
+quit=Abbrechen
+apply=Anwenden
+warning=Warnung
+information=Informatio
+connection_to_database_not_possible=Verbindung zur Datenbank nicht möglich.
+element_already_available=Element ist bereits vorhanden.
+all_fields_must_be_filled=Alle Felder müssen befüllt sein.
+removing_not_possible=Löschen ist nicht möglich.
+adding_not_possible=Hinzufügen ist nicht möglich.
+changing_not_possible=Verändern ist nicht möglich.
+saving_not_possible=Speichern ist nicht möglich.
+
