Do add localisation strings

--- a/src/resources/strings_de.properties
+++ b/src/resources/strings_de.properties
@@ -1,4 +1,4 @@
-no_database_driver_available=Datenbank Treiber nicht vorhanden.
+no_database_driver_available=Datenbank Treiber nicht vorhanden
 dish=Gericht
 dishes=Gerichte
 ingredient=Zutat
@@ -14,12 +14,43 @@ remove=Entfernen
 quit=Abbrechen
 apply=Anwenden
 warning=Warnung
-information=Informatio
-connection_to_database_not_possible=Verbindung zur Datenbank nicht möglich.
-element_already_available=Element ist bereits vorhanden.
-all_fields_must_be_filled=Alle Felder müssen befüllt sein.
-removing_not_possible=Löschen ist nicht möglich.
-adding_not_possible=Hinzufügen ist nicht möglich.
-changing_not_possible=Verändern ist nicht möglich.
-saving_not_possible=Speichern ist nicht möglich.
+information=Information
+connection_to_database_not_possible=Verbindung zur Datenbank nicht möglich
+element_already_available=Element ist bereits vorhanden
+all_fields_must_be_filled=Alle Felder müssen befüllt sein
+removing_not_possible=Löschen ist nicht möglich
+adding_not_possible=Hinzufügen ist nicht möglich
+changing_not_possible=Verändern ist nicht möglich
+saving_not_possible=Speichern ist nicht möglich
+switch_application_theme=Anwendungserscheinungsbild ändern
+application_name=ShoppingListGenerator
+please_restart_application=Bitte starte die Anwendung neu
+version=Version 2021.1
+steven_solleder=Steven Solleder
+isabell_waas=Isabell Waas
+steven_solleder_link=https://stevensolleder.de
+isabell_waas_link=https://github.com/isabellwaas
+create=Erstellen
+edit=Bearbeiten
+loading_not_possible=Laden nicht möglich
+shopping_list=Einkaufsliste
+copy_to_clipboard=In Zwischenablage kopieren
+uri_can_not_be_opened=Link kann nicht geöffnet werden
+save_on_computer=Auf dem Computer speichern
+reset_application=Anwendung zurücksetzen
+shelf=Regal
+name=Name
+store=Geschäft
+spaghetti=Spaghetti
+pizza=Pizza
+bolognese_sauce=Bolognesesoße
+kaufland=Kaufland
+grated_cheese=Streukäse
+lidl=Lidl
+lemonade=Limonade
+noodles=Nudeln
+parmesan=Parmesan
+pizza_dough=Pizzateig
+broccoli=Brokkoli
+tomato_paste=Tomatenmark
 
