--- a/src/resources/strings_de.properties
+++ b/src/resources/strings_de.properties
@@ -1,54 +1,1 @@
-no_database_driver_available=Datenbank Treiber nicht vorhanden
-dish=Gericht
-dishes=Gerichte
-ingredient=Zutat
-ingredients=Zutaten
-about=Über
-settings=Einstellungen
-back=Zurück
-forward=Weiter
-sort=Sortieren
-add=Hinzufügen
-remove=Entfernen
-quit=Abbrechen
-apply=Anwenden
-warning=Warnung
-information=Information
-connection_to_database_not_possible=Verbindung zur Datenbank nicht möglich
-element_already_available=Element ist bereits vorhanden
-all_fields_must_be_filled=Alle Felder müssen befüllt sein
-removing_not_possible=Löschen ist nicht möglich
-adding_not_possible=Hinzufügen ist nicht möglich
-changing_not_possible=Verändern ist nicht möglich
-saving_not_possible=Speichern ist nicht möglich
-switch_application_theme=Anwendungserscheinungsbild ändern
-application_name=ShoppingListGenerator
-please_restart_application=Bitte starte die Anwendung neu
-version=Version 2021.1
-steven_solleder=Steven Solleder
-isabell_waas=Isabell Waas
-steven_solleder_link=https://stevensolleder.de
-isabell_waas_link=https://github.com/isabellwaas
-edit=Bearbeiten
-loading_not_possible=Laden nicht möglich
-shopping_list=Einkaufsliste
-copy_to_clipboard=In Zwischenablage kopieren
-uri_can_not_be_opened=Link kann nicht geöffnet werden
-save_on_computer=Auf dem Computer speichern
-reset_application=Anwendung zurücksetzen
-shelf=Regal
-name=Name
-store=Geschäft
-spaghetti=Spaghetti
-pizza=Pizza
-bolognese_sauce=Bolognesesoße
-kaufland=Kaufland
-grated_cheese=Streukäse
-lidl=Lidl
-lemonade=Limonade
-noodles=Nudeln
-parmesan=Parmesan
-pizza_dough=Pizzateig
-broccoli=Brokkoli
-tomato_paste=Tomatenmark
-
+no_database_driver_available=Datenbank Treiber nicht vorhandendish=Gerichtdishes=Gerichteingredient=Zutatingredients=Zutatenabout=\u00DCbersettings=Einstellungenback=Zur\u00FCckforward=Weitersort=Sortierenadd=Hinzuf\u00FCgenremove=Entfernenquit=Abbrechenapply=Anwendenwarning=Warnunginformation=Informationconnection_to_database_not_possible=Verbindung zur Datenbank nicht m\u00F6glichelement_already_available=Element ist bereits vorhandenall_fields_must_be_filled=Alle Felder m\u00FCssen bef\u00FCllt seinremoving_not_possible=L\u00F6schen ist nicht m\u00F6glichadding_not_possible=Hinzuf\u00FCgen ist nicht m\u00F6glichchanging_not_possible=Ver\u00E4ndern ist nicht m\u00F6glichsaving_not_possible=Speichern ist nicht m\u00F6glichswitch_application_theme=Anwendungserscheinungsbild \u00E4ndernapplication_name=ShoppingListGeneratorplease_restart_application=Bitte starte die Anwendung neuversion=Version 2021.1steven_solleder=Steven Sollederisabell_waas=Isabell Waassteven_solleder_link=https://stevensolleder.deisabell_waas_link=https://github.com/isabellwaasedit=Bearbeitenloading_not_possible=Laden nicht m\u00F6glichshopping_list=Einkaufslistecopy_to_clipboard=In Zwischenablage kopierenuri_can_not_be_opened=Link kann nicht ge\u00F6ffnet werdensave_on_computer=Auf dem Computer speichernreset_application=Anwendung zur\u00FCcksetzenshelf=Regalname=Namestore=Gesch\u00E4ftspaghetti=Spaghettipizza=Pizzabolognese_sauce=Bologneseso\u00DFekaufland=Kauflandgrated_cheese=Streuk\u00E4selidl=Lidllemonade=Limonadenoodles=Nudelnparmesan=Parmesanpizza_dough=Pizzateigbroccoli=Brokkolitomato_paste=Tomatenmark
